[package]
name = "surrealdbcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
surrealdb = "1.1.1"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
